force-app/main/default/objects/vlocity_ins__InsuranceClaimLitigation__c/vlocity_ins__InsuranceClaimLitigation__c.object-meta.xml
<CustomObject>
    <description>Represents information about legal cases (i.e. litigation) filed against an insurance company on a claim. Master-detail child object of Claim.</description>
    <label>Claim Litigation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Litigation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>