force-app/main/default/objects/vlocity_ins__InsuranceClaimLitigation__c/fields/vlocity_ins__CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CaseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Case #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>